choose section updated

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
       </div>
     
         <!--------------- img container -------------->
-        <div class="flex-1 order-1 md:mx-auto lg:order-2 mb-4 lg:mb-0">
+        <div class="flex-1 order-1 mx-auto lg:order-2 mb-4 lg:mb-0">
           <img src="images/whychoose1.png" alt="">
         </div>
 
