--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <header>
     <!---------------------------- nav section ------------------------->
     <nav class="container w-auto  md:mx-4 sm:lg:mx-auto  mt-12">
-      <div class="navbar md:bg-primary-bg rounded-[600px]  md:py-5 lg:py-7 px-12">
+      <div class="navbar md:bg-primary-bg rounded-[600px]  md:py-5 lg:py-7 lg:px-12">
         <!--nav start -->
         <div class="navbar-start">
           <div class="dropdown ">
@@ -69,7 +69,7 @@
         </div>
         <!--nav center -->
         <div class="navbar-center  ">
-          <img src="images/logo.png" alt="">
+          <img src="./images/logo.png" alt="">
           <a class="btn btn-ghost normal-case text-2xl  md:text-4xl  font-bold text-black md:text-white">Fruit Burst</a>
         </div>
         <!--nav end -->
@@ -156,19 +156,19 @@
       <!-- fruits variant -->
       <div
         class="fruits absolute hidden md:flex items-center justify-center bg-white md:gap-4 lg:gap-24 md:px-8 lg:px-20 md:mx-8 lg:mx-0 md:py-6 lg:py-14 rounded-lg  -bottom-[25%] shadow-customize-shadow">
-        <div class="text-center"><img src="images/fruit1.png" class="mb-3" alt="">
+        <div class="text-center"><img src="./images/fruit1.png" class="mb-3" alt="">
           <h5>Grapes</h5>
         </div>
-        <div class="text-center"><img src="images/fruit2.png" class="mb-3" alt="">
+        <div class="text-center"><img src="./images/fruit2.png" class="mb-3" alt="">
           <h5>Orange</h5>
         </div>
-        <div class="text-center"><img src="images/fruit3.png" class="mb-3" alt="">
+        <div class="text-center"><img src="./images/fruit3.png" class="mb-3" alt="">
           <h5>Mango</h5>
         </div>
-        <div class="text-center"><img src="images/fruit4.png" class="mb-3" alt="">
+        <div class="text-center"><img src="./images/fruit4.png" class="mb-3" alt="">
           <h5>Strawberry</h5>
         </div>
-        <div class="text-center"><img src="images/fruit5.png" class="mb-3" alt="">
+        <div class="text-center"><img src="./images/fruit5.png" class="mb-3" alt="">
           <h5>Pomegranate</h5>
         </div>
       </div>
@@ -263,7 +263,7 @@
               <button class="text-primary-bg font-bold" onclick="my_modal_1.showModal()">Details</button>
               <dialog id="my_modal_1" class="modal">
                 <form method="dialog" class="modal-box py-7 px-12 mx-w-[800px]">
-                  <img src="images/fruit6.png" class="mb-6 mx-auto w-52" alt="">
+                  <img src="./images/fruit6.png" class="mb-6 mx-auto w-52" alt="">
                   <h2 class="mb-6 text-[40px] font-extrabold">Apples</h2>
                   <p class="mb-6 font-medium text-[#12121299]">Professional employees are there for you to pick the most
                     <br> amazing and fresh fruits.
@@ -321,7 +321,7 @@
               <button class="text-primary-bg font-bold" onclick="my_modal_2.showModal()">Details</button>
               <dialog id="my_modal_2" class="modal">
                 <form method="dialog" class="modal-box py-7 px-12 mx-w-[800px]">
-                  <img src="images/fruit7.png" class="mb-6 mx-auto w-52" alt="">
+                  <img src="./images/fruit7.png" class="mb-6 mx-auto w-52" alt="">
                   <h2 class="mb-6 text-[40px] font-extrabold">Orange</h2>
                   <p class="mb-6 font-medium text-[#12121299]">Professional employees are there for you to pick the most
                     <br> amazing and fresh fruits.
@@ -379,7 +379,7 @@
               <button class="text-primary-bg font-bold" onclick="my_modal_3.showModal()">Details</button>
               <dialog id="my_modal_3" class="modal">
                 <form method="dialog" class="modal-box py-7 px-12 mx-w-[800px]">
-                  <img src="images/fruit8.png" class="mb-6 mx-auto w-52" alt="">
+                  <img src="./images/fruit8.png" class="mb-6 mx-auto w-52" alt="">
                   <h2 class="mb-6 text-[40px] font-extrabold">Red Dragon</h2>
                   <p class="mb-6 font-medium text-[#12121299]">Professional employees are there for you to pick the most
                     <br> amazing and fresh fruits.
@@ -437,7 +437,7 @@
               <button class="text-primary-bg font-bold" onclick="my_modal_4.showModal()">Details</button>
               <dialog id="my_modal_4" class="modal">
                 <form method="dialog" class="modal-box py-7 px-12 mx-w-[800px]">
-                  <img src="images/fruit9.png" class="mb-6 mx-auto w-52" alt="">
+                  <img src="./images/fruit9.png" class="mb-6 mx-auto w-52" alt="">
                   <h2 class="mb-6 text-[40px] font-extrabold">Banana</h2>
                   <p class="mb-6 font-medium text-[#12121299]">Professional employees are there for you to pick the most
                     <br> amazing and fresh fruits.
@@ -599,7 +599,7 @@
     
         <!--------------- img container -------------->
         <div class="flex-1 order-1 mx-auto lg:order-2 mb-4 lg:mb-0">
-          <img src="images/whychoose1.png" alt="">
+          <img src="./images/whychoose1.png" alt="">
         </div>
 
         <!--------------- right container ------------>
@@ -656,7 +656,7 @@
   <footer
     class=" px-3 lg:px-0 footer mt-28 flex flex-col justify-center items-center   bg-black text-white text-primary-content py-28">
     <div class="flex justify-center items-center mb-6 lg:mb-12">
-      <img src="images/logo.png" alt="">
+      <img src="./images/logo.png" alt="">
       <a class="btn btn-ghost normal-case text-4xl  font-bold">Fruit Burst</a>
     </div>
     <div
