--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <!-- deal of the day text -->
         <div>
           <h3 class="text-5xl font-extrabold mb-6">Deal of the day</h3>
-          <p class="text-[#12121299] font-medium md:mb-5 lg:mb-0">Contrary to popular belief, is not simply random text. It has roots in
+          <p class="text-[#12121299] font-medium mb-7 lg:mb-0">Contrary to popular belief, is not simply random text. It has roots in
             a
             piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
