--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <a class="btn btn-ghost normal-case text-2xl  md:text-4xl  font-bold text-black md:text-white">Fruit Burst</a>
         </div>
         <!--navbar end -->
-        <div class="navbar-end   hidden md:inline-flex border-collapse">
+        <div class="navbar-end   hidden md:inline-flex md:mr-4 lg:mr-0 border-collapse">
           <div class="form-control w-full max-w-xs relative">
             <input type="text" placeholder="Search here" class="input input-bordered w-full max-w-xs rounded-[50px]" />
             <div class="absolute h-full flex items-center right-7">
@@ -497,7 +497,7 @@
             has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
         </div>
         <!-- members information part-->
-        <div class="grid  gap-9 md:grid-cols-2 lg:grid-cols-4  md:gap-24 items-center mt-6">
+        <div class="grid  gap-9 md:grid-cols-2 lg:grid-cols-4  md:gap-24 justify-center items-center mt-6">
 
           <div class="flex flex-col justify-center items-center">
             <img src="./images/member1.png" class="mb-8" alt="">
@@ -554,7 +554,7 @@
       <p class="text-[#12121299] font-medium text-center mb-12">Contrary to popular belief, is not simply random text.
         It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
       <!----why choose us section features --->
-      <div class="grid lg:grid-cols-3  gap-2">
+      <div class="grid justify-center items-center lg:grid-cols-3  gap-2">
 
         <!---------- left side container ------->
         <div class="flex-1 flex flex-col justify-between order-2 lg:order-1 ">
@@ -655,7 +655,7 @@
 
   <!------------------------ footer section -------------------------->
   <footer
-    class=" px-3 lg:px-0 footer mt-28 flex flex-col justify-center items-center   bg-black text-white text-primary-content py-28">
+    class=" px-3 lg:px-0 footer mt-16 lg:mt-28 flex flex-col justify-center items-center   bg-black text-white text-primary-content py-28">
     <div class="flex justify-center items-center mb-6 lg:mb-12">
       <img src="./images/logo.png" alt="">
       <a class="btn btn-ghost normal-case text-4xl  font-bold">Fruit Burst</a>
