--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
       <a class="btn btn-ghost normal-case text-4xl  font-bold">Fruit Burst</a>
     </div>
     <div
-      class="mb-6 lg:mb-12 flex text-xl flex-wrap gap-9 font-semibold lg:flex-row lg:gap-16 justify-center items-center content-center">
+      class="mb-6 px-3 md:px-0 lg:mb-12 flex text-xl flex-wrap gap-9 font-semibold lg:flex-row lg:gap-16 justify-center items-center content-center">
       <a href="">Home</a>
       <a href="">About Us</a>
       <a href="">Shop</a>
