--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body class="font-lato">
   <header>
     <!---------------------------- nav section ------------------------->
-    <nav class="container w-auto  md:mx-4 sm:lg:mx-auto  mt-12">
+    <nav class="container w-auto  md:mx-4 sm:lg:mx-auto mt-8  md:mt-12">
       <div class="navbar md:bg-primary-bg rounded-[600px]  md:py-5 lg:py-7 lg:px-12">
 
         <!-- navbar start -->
@@ -56,7 +56,7 @@
           </ul>
         </div>
         <!-- navbar center -->
-        <div class="navbar-center  ">
+        <div class="navbar-center  md:ml-7 lg:ml-0">
           <img src="./images/logo.png" alt="">
           <a class="btn btn-ghost normal-case text-2xl  md:text-4xl  font-bold text-black md:text-white">Fruit Burst</a>
         </div>
@@ -96,10 +96,10 @@
       </div>
     </nav>
 
-    
+
     <!---------------------------banner section ------------------------>
     <section
-      class="container rounded-lg md:w-auto  md:mx-4  md:px-0 lg:mx-auto mt-12 relative flex justify-center px-3">
+      class="container rounded-lg md:w-auto  md:mx-4  md:px-0 lg:mx-auto mt-8 md:mt-12 relative flex justify-center px-3">
       <!--banner slides -->
       <div class="carousel rounded-lg w-full min-h-[260px] md:h-[600px]">
         <div id="slide1" class="carousel-item relative w-full h-full">
@@ -565,10 +565,10 @@
       <p class="text-[#12121299] font-medium text-center mb-12">Contrary to popular belief, is not simply random text.
         It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
       <!----why choose us section features --->
-      <div class="grid justify-center items-center lg:grid-cols-3  gap-2">
+      <div class="grid lg:grid-cols-3 lg:justify-between items-center  gap-2">
 
         <!---------- left side container ------->
-        <div class="flex-1 flex flex-col justify-between order-2 lg:order-1 ">
+        <div class="flex-1 flex flex-col justify-between items-center order-2 lg:order-1 ">
           <!--  feature -->
           <div class="flex flex-col lg:flex-row justify-center items-center gap-4 mb-4">
             <div class="h-14 w-14 border-2 rounded-full text-gray-500 flex justify-center items-center bg-[#12121219]">
@@ -616,7 +616,7 @@
         </div>
 
         <!--------------- right side container ------------>
-        <div class="flex-1 flex flex-col justify-between order-3 ">
+        <div class="flex-1 flex flex-col justify-between items-center order-3 ">
           <!--  feature -->
           <div class="flex flex-col-reverse lg:flex-row  justify-center items-center gap-4 mb-4">
             <div class="flex flex-col gap-3 items-center text-center lg:items-end lg:text-end">
@@ -666,7 +666,7 @@
 
   <!------------------------ footer section -------------------------->
   <footer
-    class=" px-3 lg:px-0 footer mt-16 lg:mt-28 flex flex-col justify-center items-center   bg-black text-white text-primary-content py-28">
+    class=" px-3 lg:px-0 footer mt-10 lg:mt-28 flex flex-col justify-center items-center   bg-black text-white text-primary-content py-16 md:py-20 lg:py-24">
     <div class="flex justify-center items-center mb-6 lg:mb-12">
       <img src="./images/logo.png" alt="">
       <a class="btn btn-ghost normal-case text-4xl  font-bold">Fruit Burst</a>
