--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="carousel rounded-lg w-full min-h-[260px] md:h-[600px]">
         <div id="slide1" class="carousel-item relative w-full h-full">
           <div class="hero h-full relative   bg-cover" style="background-image: url(./images/banner1.png);">
-            <div class="hero-overlay bg-gradient-to-b from-black to-transparent bg-opacity-5"></div>
+            <div class="h-full w-full  bg-gradient-to-b from-black to-transparent "></div>
             <div class=" text-center text-neutral-content md:mb-20">
               <h2 class="text-2xl md:text-7xl font-extrabold mb-2 md:mb-6">Exotic tastes at your <br>doorstep</h2>
               <p class="text-sm md:text-xl font-medium mb-4 md:mb-8">We supply highly quality organic products</p>
@@ -120,7 +120,7 @@
         </div>
         <div id="slide2" class="carousel-item relative w-full ">
           <div class="hero h-full relative   bg-cover" style="background-image: url(./images/banner2.png);">
-            <div class="hero-overlay bg-gradient-to-b from-black to-transparent bg-opacity-5"></div>
+            <div class="h-full w-full  bg-gradient-to-b from-black to-transparent "></div>
             <div class=" text-center text-neutral-content">
               <h2 class="text-2xl md:text-7xl font-extrabold mb-2 md:mb-6">Exotic tastes at your <br>doorstep</h2>
               <p class="text-sm md:text-xl font-medium mb-4 md:mb-8">We supply highly quality organic products</p>
@@ -136,7 +136,7 @@
         </div>
         <div id="slide3" class="carousel-item relative w-full ">
           <div class="hero h-full relative   bg-cover" style="background-image: url(./images/banner3.png);">
-            <div class="hero-overlay bg-gradient-to-b from-black to-transparent bg-opacity-5"></div>
+            <div class="h-full w-full  bg-gradient-to-b from-black to-transparent "></div>
             <div class=" text-center text-neutral-content">
               <h2 class="text-2xl md:text-7xl font-extrabold mb-2 md:mb-6">Exotic tastes at your <br>doorstep</h2>
               <p class="text-sm md:text-xl font-medium mb-4 md:mb-8">We supply highly quality organic products</p>
@@ -152,7 +152,7 @@
         </div>
         <div id="slide4" class="carousel-item relative w-full ">
           <div class="hero h-full relative   bg-cover" style="background-image: url(./images/banner4.png);">
-            <div class="hero-overlay bg-gradient-to-b from-black to-transparent bg-opacity-5"></div>
+            <div class="h-full w-full  bg-gradient-to-b from-black to-transparent "></div>
             <div class=" text-center text-neutral-content">
               <h2 class="text-2xl md:text-7xl font-extrabold mb-2 md:mb-6">Exotic tastes at your <br>doorstep</h2>
               <p class="text-sm md:text-xl font-medium mb-4 md:mb-8">We supply highly quality organic products</p>
